assets/overviewer.css
html {
    height: 100%;
}

body {
    height: 100%;
    margin: 0px;
    padding: 0px;
    background-color: #000;

    font-family: Arial, sans-serif;
    font-size: 12px;
    line-height: 160%;
}

#mcmap {
    width: 100%;
    height: 100%;
}

.infoWindow {
    height: 130px;
    width: 130px;
}

.infoWindow>img {
    width:80px;
    float: left;
    image-rendering: -moz-crisp-edges;
}

.infoWindow>p {
    text-align: center;
    font-family: monospace;
}

.customControl {
    padding: 5px;
    height: 15px;
    color: black;
    font-family: Arial, sans-serif;
}

.customControl > select {
    font-size: 12px;
    line-height: 160%;
    text-align: center;

    border: 1px solid #A9BBDF;
    border-radius: 2px 2px;
    box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px;

}

.customControl > div.top {
    font-size: 12px;
    line-height: 160%;
    text-align: center;
    padding: 0px 6px;
    
    background-image: url('control-bg.png');
    background-repeat: repeat-x;
    
    border: 1px solid #A9BBDF;
    border-radius: 2px 2px;
    box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px;
    cursor: pointer;
}

.customControl > div.top:hover {
    border: 1px solid #678AC7;
}

.customControl > div.top-active {
    color: white;
    font-weight: bold;
    padding: 0px 5px;
    border: 1px solid #678AC7;
    background-image: url('control-bg-active.png');
}

.customControl > div.dropDown {
    font-size: 12px;
    background-color: white;
    
    border: 1px solid #A9BBDF;
    border-radius: 2px 2px;
    box-shadow: rgba(0, 0, 0, 0.347656) 2px 2px 3px;
    
    display: none;
}

.customControl > div.button {
    border: 1px solid #000;
    font-size: 12px;
    background-color: #fff;
    display: none;
}


#link, #coordsDiv, #progressDiv {
    background-color: #fff; /* fallback */
    background-color: rgba(255,255,255,0.55);
    border: 1px solid rgb(0, 0, 0);
    font-size: 9pt;
    padding-left: 2px;
    padding-right: 2px;
    margin-bottom: 1px;
}

#link:hover {
    background-color: #fff; /* fallback */
    background-color: rgba(255,255,255,0.8);
}

#searchControl {
    padding: 5px;
    height: 20px;
    font-family: Arial, sans-serif;
}

#searchControl > input {
    border: 2px solid #000;
    font-size: 12pt;
    width: 20em;
    background-color: #fff;
}

#searchControl>input.inactive {
    color: #ccc;
}

#searchControl>input.active {
    color: #000;
}

div#searchDropDown {
    border: 1px solid #000;
    width: 17em;
    font-size: 14pt;
    background-color: #fff;
    display: none;
}

div.searchResultItem  {
    overflow: hidden;
    text-overflow: ellipsis;    
}

div.searchResultItem img {
    width: 24px;
    height: 24px;
}

.leaflet-div-icon {
    background: transparent;
    border: none;
}

img.ov-marker {
    margin-left: -16px;
    margin-top: -30px;
    padding-bottom: 12px;
}

.progress, .coordbox {
    background-color: rgba(255,255,255,0.4);
    padding: 0px 4px;
}

img.ov-marker-legend {
    float: left;
    height: 20px;
}

